grammar.js
    stylesheet: $ =>
      seq(
        repeat(
          choice(
            alias($._statement_comment, $.block_comment),
            $.rule_set,
            $.variable_declaration,
            $._at_rule,
            ";",
            "<!--",
            "-->"
          )
        ),
        optional($._final_statement)
      ),
    _statement: $ => choice($.rule_set, $.variable_declaration, $.property_declaration, $._at_rule, ";"),
    _block: $ => braced($.declaration_block),
    declaration_block: $ => declarationBlock($, $._statement),
    rule_set: $ => seq(field("selectors", $.selectors), $._block),
    variable_declaration: $ => seq($._variable, ";"),
    _variable: $ =>
      seq(
        // Reusing the selector name rule defers `module.$variable` versus `tag.class` past the dot.
        optional(seq(field("module", alias($._interpolated_identifier, $.module_name)), ".")),
        field("name", $.variable_name),
        ":",
        field("value", $._value),
        repeat(field("flags", $.flag))
      ),
    property_declaration: $ => choice(seq($._property, ";"), $._nested_property),
    _property: $ =>
      choice(
        seq(
          field("name", $.property_name),
          optional($._space_before_colon),
          ":",
          optional(field("value", $._value)),
          optional(field("flags", choice($.flag, alias($._declaration_priority, $.important))))
        ),
        rawProperty($, $._wrapped_dashed_name)
      ),
    _declaration_priority: $ => seq(alias($._important_bang, "!"), alias(keyword("important", true), "important")),
    // As in Sass, a spaced colon touching a name before a block starts a pseudo selector instead.
    _nested_property: $ => seq(field("name", $.property_name), ":", optional(field("value", $._value)), $._block),
    property_name: $ => $._interpolated_identifier,
    // Aliasing this wrapper keeps `dashed_name` as a child of the aliased node.
    _wrapped_dashed_name: $ => $.dashed_name,
    // Custom properties and other author-defined `--` names share one node wherever they are a value or name.
    dashed_name: $ => prec.right(seq($._dashed_name, optional($._identifier_tail))),
    // The literal `--` prefix outranks the identifier token that also matches it.
    _dashed_name: () => token(prec(2, seq("--", optional(NAME_FRAGMENT)))),

    // Each comma item is one named child: a simple, compound, or complex selector.
    // Sass also accepts empty items and a trailing comma.
    selectors: $ => $._selector_list,
    _selector_list: $ => seq($._complex_selector, repeat(seq(",", optional($._complex_selector)))),
    complex_selector: $ =>
      choice(
        seq(
          optional($._combinators),
          $._compound_selector,
          repeat1(seq($._combination, $._compound_selector)),
          optional($._combinators)
        ),
        seq($._combinators, $._compound_selector, optional($._combinators)),
        seq($._compound_selector, $._combinators),
        $._combinators
      ),
    // Sass still accepts consecutive and bare combinators, such as `.a >>> .b` and `> { … }`.
    _combinators: $ => repeat1($.combinator),
    _combination: $ => choice($._combinators, $._descendant, $._space_before_colon),
    _compound_selector: $ => choice($._simple_selector, $.compound_selector),
    compound_selector: $ =>
      choice(
        seq($._simple_selector, repeat1($._compound_tail)),
        seq($.namespace_selector, choice($.tag_selector, $.universal_selector), repeat($._compound_tail))
      ),
    _simple_selector: $ =>
      choice(
        $.tag_selector,
        $.universal_selector,
        $.parent_selector,
        $.keyframe_selector,
        $._subclass_selector,
        alias($._interpolated_pseudo_selector, $.pseudo_selector)
      ),
    // Sass reads a selector after evaluating it, so an interpolation touching `(` is a pseudo call: `#{$sel}(.a)`.
    _compound_tail: $ =>
      choice(
        $._subclass_selector,
        prec.right(alias($._identifier_tail, $.tag_selector)),
        alias($._adjacent_pseudo_selector, $.pseudo_selector)
      ),
    tag_selector: $ => $._interpolated_identifier,
    id_selector: $ => seq("#", $._selector_name),
    class_selector: $ => seq(".", $._selector_name),
    parent_selector: $ => prec.right(seq("&", optional(adjacentName($, token.immediate(prec(1, NAME_FRAGMENT)))))),
    combinator: () => choice(">", "+", "~", "||"),
    keyframe_selector: $ => choice($.number, seq($.interpolation, token.immediate("%"))),
    attribute_selector: $ =>
      seq(
        "[",
        optional($.namespace_selector),
        alias($._interpolated_identifier, $.attribute_name),
        optional(
          seq(
            $.attribute_operator,
            choice($.string, $.plain_value),
            optional(alias($._identifier, $.attribute_modifier))
          )
        ),
        "]"
      ),
    attribute_operator: () => choice("=", "~=", "|=", "^=", "$=", "*="),
    pseudo_selector: $ =>
      choice(
        prec(
          1,
          seq(
            choice(":", "::"),
            alias($._value_pseudo_name, $.pseudo_name),
            alias($._pseudo_value_arguments, $.selector_arguments)
          )
        ),
        seq(
          ":",
          alias(token.immediate(choice(...NTH_PSEUDOS.map(name => keyword(name, true)))), $.pseudo_name),
          $.nth_arguments
        ),
        seq(choice(":", "::"), alias($._selector_name, $.pseudo_name), optional($.selector_arguments))
      ),
    nth_arguments: $ =>
      seq(
        token.immediate("("),
        choice(alias(choice(keyword("odd", true), keyword("even", true)), $.plain_value), $.nth_formula),
        optional(seq(alias(keyword("of", true), "of"), $.selectors)),
        ")"
      ),
    nth_formula: $ => repeat1(choice(/[+-]?(?:[0-9]*[nN]|[0-9]+)|[+-]/, $.interpolation)),
    selector_arguments: $ => seq(token.immediate("("), optional(choice($._selector_list, $.string)), ")"),
    _value_pseudo_name: () => token.immediate(choice(...VALUE_PSEUDOS.map(name => keyword(name, true)))),
    _pseudo_value_arguments: $ =>
      seq(token.immediate("("), repeat(choice($.plain_value, $.string, "*", ",", ".")), ")"),
    _selector_name: $ => adjacentName($, choice(token.immediate(IDENTIFIER), $._value_pseudo_name)),
    _interpolated_identifier: $ => interpolatedIdentifier($, choice(...identifierWords($)), "-"),
    _identifier_tail: $ =>
      repeat1(
        seq(alias($._adjacent_interpolation, $.interpolation), optional(token.immediate(prec(1, NAME_FRAGMENT))))
      ),
    interpolation: $ => seq("#{", $._value, "}"),
    // Only an adjacent interpolation continues a name; whitespace starts the next value or selector.
    _adjacent_interpolation: $ => seq(alias(token.immediate(prec(1, "#{")), "#{"), $._value, "}"),

    // Trivia comments never enter SassScript, even when their text contains `#{`.
    block_comment: $ =>
      seq(
        "/*",
        repeat(
          choice(
            alias(token.immediate(prec(1, /[^*#]+/)), $.comment_content),
            alias(token.immediate(choice("*", "#")), $.comment_content)
          )
        ),
        "*/"
      ),
    // Only statement positions offer this opener; content wins over extras, so nested openers stay literal.
    _statement_comment: $ =>
      seq(
        alias($._statement_comment_start, "/*"),
        repeat(
          choice(
            alias(token.immediate(prec(1, /[^*#]+/)), $.comment_content),
            alias(token.immediate(choice("*", "#")), $.comment_content),
            alias($._literal_comment_interpolation, $.comment_content),
            $.interpolation
          )
        ),
        "*/"
      ),
    number: $ =>
      choice(
        $._scalar_number,
        seq(
          /-?(?:\d*\.\d+|\d+)(?:[eE][+-]?\d+)?/,
          optional(alias(token.immediate(prec(1, choice("%", SIMPLE_UNIT))), $.unit))
        ),
        seq($._dimension_number, alias($._dimension_unit, $.unit))
      ),
    string: $ => choice(quoted($, '"', /[^"\\#\r\n\f]+/), quoted($, "'", /[^'\\#\r\n\f]+/)),
    escape_sequence: () => token.immediate(ESCAPE),
    _value: $ => seq(commaSep1($._space_value), optional(",")),
    _space_value: $ => repeat1($._value_atom),
    // Sass subtracts on an unspaced minus after a number (`1-1`, `1px-2px`); elsewhere `-1` is one number.
    _value_atom: $ => choice($._expression_atom, $.map, $.list),
    arguments: $ => argumentList($._argument),
    // Each comma item is exactly one named child; a positional item of several atoms is an `argument`.
    _argument: $ => choice($.named_argument, $.feature_query, $._value_atom, $.argument),
    argument: $ => seq($._value_atom, repeat1($._value_atom)),
    named_argument: $ => seq(field("name", $.variable_name), ":", field("value", $._space_value)),
    call_expression: $ =>
      choice(
        functionCall($, $._css_var_function_name, alias($._css_var_arguments, $.arguments)),
        functionCall($, $._conditional_function_name),
        prec(1, functionCall($, $._math_function_name, alias($._calculation_arguments, $.arguments))),
        functionCall($, $.dashed_name),
        seq(
          optional(seq(field("module", moduleName($)), token.immediate("."))),
          field("name", alias($._interpolated_identifier, $.function_name)),
          field("arguments", $.arguments)
        )
      ),
    _css_var_arguments: $ =>
      seq(
        token.immediate("("),
        optional(choice($._value_atom, $.argument)),
        optional(seq(",", optional(choice($._css_fallback_item, alias($._css_fallback, $.argument))))),
        ")"
      ),
    // Everything after the first comma, commas included, is one fallback argument.
    _css_fallback_item: $ =>
      choice(
        $._value_atom,
        alias($._css_fallback_group, $.raw_group),
        alias($._css_fallback_call, $.call_expression),
        ",",
        ":",
        alias(token(prec(-1, /[^\s()\[\]{};,!"']/)), $.raw_text)
      ),
    _math_function_name: () => token(choice(...MATH_FUNCTIONS.map(name => keyword(name, true)))),
    _selector_function_name: () => keyword("selector", true),
    _type_function_name: () => keyword("type", true),
    _query_function_name: () =>
      token(choice(...["style", "scroll-state", "supports", "media", "at-rule"].map(name => keyword(name, true)))),
    _raw_function_word: () => token(choice(...RAW_FUNCTION_NAMES)),
    _sass_conditional_function_name: () => /if/,
    _conditional_function_name: () => keyword("if", true),
    _else_keyword: () => keyword("else", true),
    _result_property_name: () => keyword("result", true),
    _calculation_arguments: $ =>
      argumentList(
        choice($.named_argument, $.feature_query, $._calculation_atom, alias($._calculation_argument, $.argument))
      ),
    member_expression: $ => seq(field("module", moduleName($)), token.immediate("."), field("name", $.variable_name)),
    list: $ => choice(seq("(", optional($._value), ")"), seq("[", optional($._value), "]")),
    map: $ => seq("(", commaSep1($.map_entry), optional(","), ")"),
    map_entry: $ => seq(field("key", $._space_value), ":", field("value", $._space_value)),
    operator: $ => choice("+", "-", "*", "/", "%", "==", "!=", "<", "<=", ">", ">=", $._sass_operator),
    variable_name: () => token(seq("$", IDENTIFIER)),
    boolean: $ => $._sass_boolean,
    null: $ => $._sass_null,
    hex_color: () => token(seq("#", /(?:[0-9a-fA-F]{8}|[0-9a-fA-F]{6}|[0-9a-fA-F]{4}|[0-9a-fA-F]{3})/)),
    hash_value: () => token(seq("#", NAME_FRAGMENT)),
    plain_value: $ => choice($._interpolated_identifier, $.dashed_name, $._special_call_word),
    // Special-call names are ordinary words unless their literal call syntax follows.
    _special_call_word: $ => prec.right(seq(choice(URL_NAME, $._raw_function_word), optional($._identifier_tail))),
    flag: () => /![ \t]*[-\w]+/,
    important: () => /![ \t]*[iI][mM][pP][oO][rR][tT][aA][nN][tT]/,
    // Reused query words must also reduce as identifiers after an enclosing call changes.
    // Prefer their operator role only where a query condition accepts it.
    _query_word_operator: () => token(choice(...["not", "or", "and", "only"].map(name => keyword(name, true)))),
    _identifier: () => IDENTIFIER,

    // Raw CSS only enters SassScript through interpolation. Its CSS tokens keep typed
    // nodes, but no raw token is a Sass variable, boolean, null, or evaluated operation.
    raw_value: $ => repeat1($._raw_item),
    _raw_item: $ => choice($.raw_text, $._raw_token, $.raw_group),
    raw_text: $ => choice(token(prec(2, /\/\/[^\r\n;{}()\[\]"'\\#!]*/)), $._raw_word),
    _raw_word: () => token(RAW_WORD),
    _prelude_group: $ => choice(seq("(", rawContent($), ")"), seq("[", rawContent($), "]")),
    raw_group: $ =>
      choice($._prelude_group, seq(choice("{", alias($._literal_raw_interpolation, $.raw_text)), rawContent($), "}")),
    url: $ =>
      seq(
        alias(URL_NAME, $.function_name),
        token.immediate("("),
        optional(
          choice(
            seq(choice($.variable_name, $.string, alias($._url_call, $.call_expression)), repeat($._value_atom)),
            $.url_value
          )
        ),
        ")"
      ),
    // Sass reparses url() as a function call once its contents are not a literal URL.
    _url_call: $ => functionCall($, URL_WORD),
    url_value: $ =>
      repeat1(
        choice(
          alias($._literal_css_url, $.raw_text),
          alias(URL_WORD, $.raw_text),
          alias(token.immediate("#"), $.raw_text),
          $.escape_sequence,
          $.interpolation
        )
      ),
    conditional: $ =>
      choice(
        seq(
          alias($._sass_conditional_function_name, $.function_name),
          token.immediate("("),
          choice(
            seq(commaSep1(choice($._value_atom, $.argument, $.named_argument)), optional(",")),
            seq(sep1($.conditional_branch, ";"), optional(";"))
          ),
          ")"
        ),
        seq(
          alias($._conditional_function_name, $.function_name),
          token.immediate("("),
          sep1($.conditional_branch, ";"),
          optional(";"),
          ")"
        )
      ),
    conditional_branch: $ =>
      seq(
        field("condition", choice($._query_value, prec(1, alias($._else_keyword, "else")))),
        ":",
        optional(field("value", $._value))
      ),

    _at_rule: $ => choice(...atRules($, $.query_statement)),
    // Final statements may omit their semicolon. Property endings stay local
    // to each block context, while these endings also apply to the stylesheet.
    _final_statement: $ =>
      choice(
        alias($._variable, $.variable_declaration),
        alias($._use_head, $.use_statement),
        alias($._forward_head, $.forward_statement),
        alias($._include_head, $.include_statement),
        alias($._content_head, $.content_statement),
        alias($._value_head, $.value_statement),
        alias($._extend_head, $.extend_statement),
        alias($._namespace_head, $.namespace_statement),
        alias($._css_statement_head, $.css_statement),
        alias($._query_head, $.query_statement),
        alias($._at_rule_head, $.at_rule)
      ),
    use_statement: $ => seq($._use_head, ";"),
    _use_head: $ =>
      seq(
        directive("use"),
        $.string,
        optional(seq("as", field("alias", choice(moduleName($), "*")))),
        optional($.configuration)
      ),
    function_definition: $ =>
      choice(
        functionDefinition($, $._dashed_name, $._css_function_block),
        functionDefinition($, $._identifier, $._block)
      ),
    _css_function_block: $ => braced(alias($._css_function_body, $.declaration_block)),
    mixin_definition: $ =>
      seq(
        directive("mixin"),
        field("name", alias($._identifier, $.function_name)),
        optional(field("parameters", $.parameters)),
        $._block
      ),
    parameters: $ => argumentList($.parameter, "("),
